[package]
name = "glium_egui_demo_amogus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
image = {version = "0.24.5", default-features=false, features=["png"]}
egui = "0.20.1"
egui_glium = "0.20.1"
oorandom = "11.1.3"
nalgebra = "0.31.4"
bytemuck = "1.12.3"
